# ror-server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  conanfile.txt  sonar-project.properties
.github/workflows/: coverity-scan.yml  sonarcloud.yml
cmake/: FindWt.cmake
contrib/: rorserver-initscript
debian/: changelog  control  copyright
dependencies/ctemplate/: CMakeLists.txt
dependencies/ctemplate/src/htmlparser/: fsm_config.py  generate_fsm.py
dependencies/ctemplate/src/windows/: port.h
dependencies/mongoose/: CMakeLists.txt  mongoose.c  mongoose.h
dependencies/socketw/: sw_internal.h
source/gui/: CMakeLists.txt  icon.rc  servergui.ui
source/gui/old/: servergui.cpp
source/server/: CMakeLists.txt  ScriptEngine.cpp  blacklist.cpp  broadcaster.cpp  broadcaster.h  config.cpp  config.h  http.cpp  listener.cpp  listener.h  master-server.cpp  messaging.cpp  receiver.cpp  receiver.h  rorserver.cpp  sequencer.cpp  sequencer.h  spamfilter.cpp  userauth.cpp  utils.cpp  webserver.cpp  webserver.h
source/server/web/: header.html  index.cpp  index.h  index.html
source/web/: index.html
